k8s_dev/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
      - name: worker
        image: eoinwhelan64/fibonacci-worker:k8s
        # Dont need to assign any ports or services, because worker will not receive any requests
        # it will only reach out to other apps, wont have any direct traffic to it trying to get info out of it
        # Nothing will make a request into the worker pod, so no ports or services
        # services only for requests going into pod
        # env vars
